add msgid "Branch of %d"

--- a/languages/wp_post_branches-ja.po
+++ b/languages/wp_post_branches-ja.po
@@ -3,15 +3,22 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: horike37 <horike37@gmail.com>\n"
+"Last-Translator: Hitoshi Omagari <hitoshi@prime-strategy.co.jp>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.7\n"
 
 msgid "Create Branch"
 msgstr "ブランチを作る"
 
-msgid "This post is a copy of the post id <a href='%s' target='__blank' >%s</a> Overwrite the original post by pressing the publish button."
-msgstr "この投稿はIDが<a href='%s' target='__blank' >%s</a>のブランチです。公開すると元の記事を上書きします。"
+msgid ""
+"This post is a copy of the post id <a href='%s' target='__blank' >%s</a> "
+"Overwrite the original post by pressing the publish button."
+msgstr ""
+"この投稿はIDが<a href='%s' target='__blank' >%s</a>のブランチです。公開すると"
+"元の記事を上書きします。"
 
+msgid "Branch of %d"
+msgstr "%dのブランチ"
